# cedt-algo-trading-valuation-factor

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: CEDT Connect DB.ipynb  TvDatafeed.ipynb  TvDatafeed_VectorBT.ipynb  momentum_strategy_(1).ipynb  pipeline.ipynb  settrade_ezyquant_execution_(1).ipynb  settrade_open_api_(1).ipynb  valuation_factor_experiment.ipynb
src/: backtest.py  config.py  main.py  setup.py  utils.py
src/setup/: setup_google_drive.py
src/strategies/: trend_template.py  valuation_factor.py
