[project]
name = "week-9-ezyquant"
version = "0.1.0"
requires-python = ">=3.12,<=3.13"
dependencies = [
    "backtesting>=0.2.0",
    "dotenv>=0.9.9",
    "ezyquant>=0.9.6",
    "ipykernel>=7.2.0",
    "nbstripout>=0.9.1",
    "notebook>=7.5.3",
    "pandas<3.0.0",
    "settrade-v2>=2.2.1",
    "tvdatafeed",
    "vectorbt[full]>=0.28.5",
]

[tool.uv.sources]
tvdatafeed = { git = "https://github.com/rongardF/tvdatafeed.git" }
